Install dtu model qgis plugin

--- a/dtu/Dockerfile
+++ b/dtu/Dockerfile
@@ -1,6 +1,8 @@
 FROM ubuntu:jammy
 
 ARG DEBIAN_FRONTEND=noninteractive
+ARG URL_OS2DAMAGECOST=https://github.com/Skadesokonomi/Installation/raw/refs/heads/main/OS2DamageCost.zip
+ARG URL_OS2DAMAGECOSTADMIN=https://github.com/Skadesokonomi/Installation/raw/refs/heads/main/OS2DamageCostAdmin.zip
 
 #
 #   install latest system updates and additional system libraries
@@ -10,6 +12,7 @@ RUN apt-get update \
     && apt-get install --assume-yes --no-install-recommends \
         gnupg \
         software-properties-common \
+        unzip \
         wget \
     && rm -rf /var/lib/apt/lists/*
 
@@ -28,3 +31,17 @@ RUN apt-get update \
         qgis \
         python3-qgis \
     && rm -rf /var/lib/apt/lists/*
+
+#
+#   install DTU cost damage model qgis plugin
+#
+WORKDIR /usr/share/qgis/python/plugins
+# filter exit code 1 for unzip as unzip sets it to 1 for warnings
+RUN wget --quiet -O OS2DamageCost.zip $URL_OS2DAMAGECOST \
+    && unzip -q OS2DamageCost.zip | ( if [ $? == 1 ]; then exit 0; fi ) \
+    && rm OS2DamageCost.zip \
+    && wget --quiet -O OS2DamageCostAdmin.zip $URL_OS2DAMAGECOSTADMIN \
+    && unzip -q OS2DamageCostAdmin.zip | ( if [ $? == 1 ]; then exit 0; fi ) \
+    && rm OS2DamageCostAdmin.zip
+
+WORKDIR /home
