--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -78,6 +78,16 @@ jobs:
         #
         TRIVY_DB_REPOSITORY: public.ecr.aws/aquasecurity/trivy-db:2
         TRIVY_JAVA_DB_REPOSITORY: public.ecr.aws/aquasecurity/trivy-java-db:1
+        #
+        # Original GitHub repository
+        #
+        # TRIVY_DB_REPOSITORY: ghcr.io/aquasecurity/trivy-db:2
+        # TRIVY_JAVA_DB_REPOSITORY: ghcr.io/aquasecurity/trivy-java-db:1
+        #
+        #
+        # Disable VEX notice
+        #
+        TRIVY_DISABLE_VEX_NOTICE: disable_vex_notice
       with:
         image-ref: "${{ env.IMAGE_TAG }}"
         format: 'table'
