Add job timeout-minutes to prevent action minutes wasting using max runtime * 2

--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -2,7 +2,6 @@ name: "build push API images"
 concurrency:
   group: "api"
   cancel-in-progress: true
-
 env:
   BUILD_CONTEXT: ./
   IMAGE_AUTHORS: https://52North.org/
@@ -12,7 +11,6 @@ env:
   IMAGE_TITLE: 52°North DIRECTED API
   IMAGE_VENDOR: 52°North GmbH
   METADATA_TAG_PATTERN: v(.*)
-
 on:
   workflow_dispatch:
     inputs:
@@ -20,17 +18,15 @@ on:
         description: "Please provide a git tag value, e.g. v1.0-manually-triggered.1"
         required: true
         type: string
-        default: "v1.0-manually-triggered.1"
+        default: "v1.1-manually-triggered.1"
   push:
     tags:
     - "v*"
-
 jobs:
   push_to_docker_hub:
-
     name: build push docker image
     runs-on: ubuntu-latest
-
+    timeout-minutes: 5
     steps:
     -
       name: Checkout Repository
