--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -86,8 +86,8 @@ jobs:
         TRIVY_DISABLE_VEX_NOTICE: disable_vex_notice
       with:
         image-ref: "${{ env.IMAGE_TAG }}"
-        format: 'table'
-        output: 'trivy-results.txt'
+        format: 'json'
+        output: 'trivy-results.json'
         exit-code: '0'
         ignore-unfixed: true
         vuln-type: 'os,library'
@@ -95,17 +95,28 @@ jobs:
     -
       name: remove empty results
       run: |
-        ls -lhA trivy-results.txt; \
-        find trivy-results.txt -type f -empty -delete -print
-    -
-      if: ${{ hashFiles('trivy-results.txt') != '' }}
-      name: remove "no HIGH or CRITICAL CVEs found" results
-      run: |
-        if [[ -s trivy-results.txt ]] \
-          && [[ $(wc -l trivy-results.txt| awk '{print $1}') -eq 5 ]] \
-          && [[ $(grep -rc "Total: 0 (HIGH: 0, CRITICAL: 0)" trivy-results.txt) -eq 1 ]]; then \
-            rm -v trivy-results.txt; \
+        vulnerabilities=$(cat trivy-results.json | jq '.Results[].Vulnerabilities | length'); \
+        if [[ "$vulnerabilities" -eq 0 ]]; then \
+          rm trivy-results.json
         fi
+    -
+      if: ${{ hashFiles('trivy-results.json') != '' }}
+      name: 2nd scan to create human readable report
+      uses: aquasecurity/trivy-action@master
+      env:
+        TRIVY_DB_REPOSITORY: public.ecr.aws/aquasecurity/trivy-db:2
+        TRIVY_JAVA_DB_REPOSITORY: public.ecr.aws/aquasecurity/trivy-java-db:1
+        TRIVY_DISABLE_VEX_NOTICE: disable_vex_notice
+        TRIVY_FORMAT: table
+        TRIVY_OUTPUT: trivy-results.txt
+      with:
+        image-ref: "${{ env.IMAGE_TAG }}"
+        format: 'table'
+        output: 'trivy-results.txt'
+        exit-code: '0'
+        ignore-unfixed: true
+        vuln-type: 'os,library'
+        severity: 'CRITICAL,HIGH'
     -
       if: ${{ hashFiles('trivy-results.txt') != '' }}
       name: Upload to 52N slack
